--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1845,7 +1845,7 @@
 		margin: 0 0 2em 0;
 	}
 
-	h1, h2, h3, h4, h5, h6 {
+	h1, h3, h4, h5, h6 {
 		color: #5b5b5b;
 		font-weight: 700;
 		letter-spacing: 0.125em;
@@ -2082,7 +2082,10 @@
 	.formerize-placeholder {
 		color: rgba(110, 110, 110, 0.5) !important;
 	}
+.hidephoto:after{
+	display: none !important;
 
+}
 /* Image */
 
 	.image {
